fixed spacing on bubbles in search bar relative to pilot/learning den logo

--- a/static/css/timetable/partials/course_modal.scss
+++ b/static/css/timetable/partials/course_modal.scss
@@ -71,6 +71,7 @@
   align-items: center;
   margin: 6px;
   >.areas {
+    margin-right: 2%;
     display: flex;
     > div {
       border-radius: 25%;
